kustomize/overlays/scots-lab/apps/netbootxyz/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbootxyz
  labels:
    name: netbootxyz
